Updated TestBase.java Added new test case - REST_Assure_Get_Call.java Updated pom.xml file Added new class RestAssureClientCall.java